# tablefmt

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV_NOTES.md  LICENSE  README.md
.github/workflows/: release.yml
docs/demo/: tablefmt-demo.cast
docs/demo/data/: metrics.yaml  products.json  sales.csv  table.md
scripts/: gen-demo.py
src/: cli.rs  color.rs  edit.rs  format.rs  locate.rs  main.rs  model.rs  numeric.rs  parse.rs  prettify.rs  table_parse.rs
xtask/: Cargo.toml
xtask/src/: main.rs
