[workspace]
members = [".", "xtask"]

[workspace.metadata.release]
publish = false
push = false
shared-version = "tablefmt"
tag-name = "v{{version}}"
# pre-release-commit-message = "build: Bumped version {{prev_version}} -> v{{version}}"
pre-release-commit-message = "build: bumped version to v{{version}}"
tag-message = ""

[[workspace.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "## unreleased"
replace = "## unreleased\n\n## v{{version}} ({{date}})"
exactly = 1

[package]
name = "tablefmt"
version = "0.3.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "tablefmt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4.6.5"
tabled = { version = "0.20", features = ["ansi"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.8", features = ["preserve_order"] }
saphyr = "0.0.6"
anyhow = "1"
